--- a/CarInsuranceMVC/CarInsuranceMVC/bin/CarInsuranceMVC.dll.config
+++ b/CarInsuranceMVC/CarInsuranceMVC/bin/CarInsuranceMVC.dll.config
@@ -68,6 +68,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="InsuranceQuotesEntities" connectionString="metadata=res://*/Models.InsuranceQuotes.csdl|res://*/Models.InsuranceQuotes.ssdl|res://*/Models.InsuranceQuotes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=InsuranceQuotes;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InsuranceQuotesEntities1" connectionString="metadata=res://*/Models.InsuranceQuotes.csdl|res://*/Models.InsuranceQuotes.ssdl|res://*/Models.InsuranceQuotes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=InsuranceQuotes;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
